add: root $ redux

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="description"
+      content="Rent travel trucks in Ukraine. Explore our wide selection of campers for rent with various equipment and types. Book your travel track rental now!"
+    />
+    <title>
+      Travel Truck Rental - The Perfect Solution For Your Outdoor Adventures
+    </title>
   </head>
   <body>
     <div id="root"></div>
